# abstract_hugpy_dev

./: .gitignore  LICENSE  MANIFEST.in  PKG-INFO  README.md  _vi_phase3a_verify.py  pyproject.toml  setup.py
deploy/: ALLOCATION-MODES.md  WORKER-BOOT-PREWARM.md  WORKER-WILDCARD.md  hugpy-todo-keeper.service
src/abstract_hugpy_dev/: __init__.py  _compat_pydantic.py  central.py  cli.py  keeper.py  model_sync.py
src/abstract_hugpy_dev/_platform/: __init__.py  async_runtime.py  binaries.py  hardware.py  paths.py  procutil.py
src/abstract_hugpy_dev/bot/: bot.py  config.py  hugpy_client.py  prefs.py  streamer.py
src/abstract_hugpy_dev/bot/cogs/: chat.py  helpers.py  ml.py  ops.py  tools.py
src/abstract_hugpy_dev/chaos/: SCHEMA.md  __init__.py  __main__.py  alloc.py  assortment.py  client.py  observe.py  runner.py  schema.py  sweep.py
src/abstract_hugpy_dev/comms/: __init__.py  agent_nodes.py  blocklist.py  bus.py  calibration.py  hf_metadata.py  jobs.py  jobs.py.bak-keeper-20260714  model_metadata.py  principals.py  settings.py  shared.py  todo_keeper.py  todo_keeper_daemon.py
src/abstract_hugpy_dev/console_dist/: index.html
src/abstract_hugpy_dev/console_dist/assets/: main.037f358bfe6958a0b79e.js  main.08b0b8d4a556e787fcca.js  main.09fd9d1d18cf08733d44.js  main.0b4bf16fe2b933e0f853.js  main.10710aaa3c32340d40ed.js  main.12f2d3e1cea58fc19a2e.js  main.178684c8f635836de1a9.js  main.21978cea077a8c28eb41.js  main.336d0f1441150ce5aadb.js  main.33c9ee1d61d23703e6ef.js  main.33caf52c1f824da3bab9.js  main.35ff61b8675474619054.js  main.3d196f1275bfc1843a2f.js  main.482d67bb02c464eda283.js  main.4d2cacf94c315d6c3529.js  main.5425032f9b2e7117eeca.js  main.6219c43b98d33182ed84.js  main.64b39b2ca1dc0727e5b2.js  main.6d182850ceb806010fc1.js  main.6eae0e03ad1cc182797d.js  main.702950e73447ed3fa427.js  main.705802d34369932fded1.js  main.72ffaa9624cb3172e9a4.js  main.78c32f10227b072ae8be.js  main.8db6ae64a19d466ab225.js  main.95b750f05872f9af8177.js  main.9f78e6fac8cf941ebad5.js  main.aa7d802c3f764ba8c35c.js  main.aaf673dcde391f2253d5.js  main.ac3316947b0173f0c89c.js  main.b28508a8086ed002f5b7.js  main.c7b601f07c0b7b2d6c3b.js  main.c7ca23177caaf3030f9e.js  main.d38bd08721d021aa9a14.js  main.dae1bad8fe9a7bf7e33c.js  main.df27660d9e416f434efa.js  main.e08b85d4f79f5291c2ec.js  main.e0b8ff95b23004ccd033.js  main.e49f9484b9bb3891a359.js  main.ef60c06b88dd97d251db.js  (+2 more)
src/abstract_hugpy_dev/console_dist/fleet/: index.html
src/abstract_hugpy_dev/console_dist/media/: index.html
src/abstract_hugpy_dev/console_dist/video/: index.html
src/abstract_hugpy_dev/engine/: __init__.py  build.py  fetch.py  resolve.py
src/abstract_hugpy_dev/flask_app/: __init__.py  wsgi_app.py  wsgi_app.py.bak-keeper-20260718
src/abstract_hugpy_dev/flask_app/app/: __init__.py  endpoints_explorer.py  endpoints_view.py  operator_auth.py  video_auth.py
src/abstract_hugpy_dev/gguf_worker/: __init__.py  agent.py
src/abstract_hugpy_dev/imports/: __init__.py
src/abstract_hugpy_dev/imports/apis/: __init__.py  call_api.py  download_models.py  get_module.py  imports.py  (+3 more)
src/abstract_hugpy_dev/managers/: __init__.py  alloc_modes.py  spill.py  task_deps.py
src/abstract_hugpy_dev/phone_brick/: __init__.py  __main__.py  analyze.py  bootstrap.sh  client.py  consensus.py  detector.py  orchestrator.py  protocol.py  registration.py  rendering.py  rpc_backend.py  schemas.py  worker.py
src/abstract_hugpy_dev/utils/: __init__.py  imports.py
src/abstract_hugpy_dev/video_intel/: __init__.py  _selftest.py  _selftest_audio.py  _selftest_gen.py  _selftest_movie_presets.py  _selftest_scene.py  audio_schema.py  chains.py  crop_schema.py  frame_schema.py  gen_schema.py  identity_profiles.py  identity_profiles.py.bak-keeper-20260714  identity_reconstruction_schema.py  identity_reconstruction_schema.py.bak-keeper-20260714  identity_video_extract_schema.py  job_bridge.py  job_bridge.py.bak-keeper-20260714  job_schema.py  media_bus.py  media_bus.py.bak-keeper-20260714  media_schema.py  media_store.py  mlt_render_schema.py  movie_schema.py  placement.py  presets.py  result_schema.py  scene_schema.py  shot_intent.py  studio_movie_schema.py  studio_presets.py
src/abstract_hugpy_dev/worker_agent/: __init__.py  _studio_subproc.py  agent.py  bootstrap.sh  budget.py  flex.py  gen_gate.py  install.py  pid_registry.py  pid_registry.py.bak-keeper-20260714  provision.py  studio_render.py
tests/: chaos_fakes.py  test.py  test_agent_nodes.py  test_alloc_defaults.py  test_alloc_modes.py  test_allocation_accuracy.py  test_attributed_vs_resident.py  test_authoritative_cancel_and_orphan_expiry.py  test_bar_summary_central.py  test_block_propagation.py  test_budget_bar_spec.py  test_budget_min_wins.py  test_bulk_alloc_route.py  test_bulk_reap_assigned_candidate.py  test_bulk_residency_route.py  test_calibration.py  test_central_cap_gating.py  test_central_task_gating.py  test_central_transfer_budget_gate.py  test_central_transfer_cap.py  test_chaos_alloc_restore.py  test_chaos_assortment.py  test_chaos_backoff.py  test_chaos_schema.py  test_chaos_stream_ceiling.py  test_chaos_sweep.py  test_chat_tool_messages_schema.py  test_chunksum_verify.py  test_cold_hold.py  test_comfy_headroom.py  test_comfy_id_lock.py  test_comms.py  test_comms_foundations.py  test_comms_mirror.py  test_comms_options.py  test_comms_orphan_prune.py  test_comms_wiring.py  test_download_progress.py  test_emfile_retry.py  test_evict_model.py  (+109 more)
tests/comms/: test_media_control_plane.py
tests/imports/: __init__.py  src
tests/studio/: test_studio_autofit.py  test_studio_cancel.py  test_studio_clip_archive.py  test_studio_clip_serve.py  test_studio_conformance.py  test_studio_enhance.py  test_studio_hot_weights.py  test_studio_id_lock.py  test_studio_model_pin.py  test_studio_movie.py  test_studio_movie_id_cut.py  test_studio_movie_offload.py  test_studio_movie_vace.py  test_studio_offload.py  test_studio_prompt.py  test_studio_render_watchdog.py  test_studio_runner_gate.py  test_studio_sampler_defaults.py  test_studio_source_video.py  test_studio_t2v.py  test_studio_vace.py
(+316 files in other folders)
